--- a/quarkus-eda-demo/pom.xml
+++ b/quarkus-eda-demo/pom.xml
@@ -51,8 +51,8 @@
     <!-- <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-container-image-jib</artifactId>
-    </dependency>
-    <dependency> -->
+    </dependency> -->
+    <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-junit5</artifactId>
       <scope>test</scope>
