Update Java 17 and Add limits

--- a/quarkus-eda-demo/src/main/resources/application.properties
+++ b/quarkus-eda-demo/src/main/resources/application.properties
@@ -12,6 +12,11 @@ quarkus.kubernetes.deployment-target=openshift
 quarkus.kubernetes-client.trust-certs=true
 quarkus.openshift.build-strategy=docker
 
+quarkus.openshift.resources.requests.memory=512Mi
+quarkus.openshift.resources.requests.cpu=0.5
+quarkus.openshift.resources.limits.memory=512Mi
+quarkus.openshift.resources.limits.cpu=0.5
+
 # Container Image build with Jib
 # quarkus.container-image.build=true
 # quarkus.container-image.registry=quay.io
