--- a/quarkus-eda-knative-demo/src/main/resources/application.properties
+++ b/quarkus-eda-knative-demo/src/main/resources/application.properties
@@ -8,7 +8,7 @@ quarkus.kubernetes.deploy=true
 quarkus.openshift.build-strategy=docker
 
 # Knative configurations
-quarkus.knative.max-scale=10
-quarkus.knative.min-scale=0
-quarkus.knative.revision-auto-scaling.target=1
-quarkus.knative.revision-auto-scaling.target-utilization-percentage=30
+# quarkus.knative.max-scale=10
+# quarkus.knative.min-scale=0
+# quarkus.knative.revision-auto-scaling.target=1
+# quarkus.knative.revision-auto-scaling.target-utilization-percentage=30
