--- a/quarkus-eda-demo/src/main/resources/application.properties
+++ b/quarkus-eda-demo/src/main/resources/application.properties
@@ -12,14 +12,14 @@ quarkus.kubernetes.deployment-target=openshift
 quarkus.kubernetes-client.trust-certs=true
 quarkus.openshift.build-strategy=docker
 
-# quarkus.openshift.resources.requests.memory=512Mi
-# quarkus.openshift.resources.requests.cpu=0.5
-# quarkus.openshift.resources.limits.memory=512Mi
-# quarkus.openshift.resources.limits.cpu=0.5
+quarkus.openshift.resources.requests.memory=512Mi
+quarkus.openshift.resources.requests.cpu=0.5
+quarkus.openshift.resources.limits.memory=512Mi
+quarkus.openshift.resources.limits.cpu=0.5
 
 # Container Image build with Jib
-quarkus.container-image.build=true
-quarkus.container-image.registry=quay.io
-quarkus.container-image.group=danieloh30
-quarkus.container-image.name=quarkus-eda-demo
-quarkus.container-image.tag=3.3.3
+# quarkus.container-image.build=true
+# quarkus.container-image.registry=quay.io
+# quarkus.container-image.group=danieloh30
+# quarkus.container-image.name=quarkus-eda-demo
+# quarkus.container-image.tag=3.3.3
