--- a/quarkus-eda-demo/src/main/resources/application.properties
+++ b/quarkus-eda-demo/src/main/resources/application.properties
@@ -11,6 +11,7 @@ quarkus.kubernetes.deploy=true
 quarkus.kubernetes.deployment-target=openshift
 quarkus.kubernetes-client.trust-certs=true
 quarkus.openshift.build-strategy=docker
+quarkus.openshift.base-jvm-image=registry.access.redhat.com/ubi8/openjdk-21:1.18
 
 quarkus.openshift.resources.requests.memory=512Mi
 quarkus.openshift.resources.requests.cpu=0.5
