--- a/quarkus-eda-demo/src/main/resources/application.properties
+++ b/quarkus-eda-demo/src/main/resources/application.properties
@@ -23,3 +23,4 @@ quarkus.openshift.resources.limits.cpu=0.5
 # quarkus.container-image.group=danieloh30
 # quarkus.container-image.name=quarkus-eda-demo
 # quarkus.container-image.tag=3.12.0
+# quarkus.container-image.push=true
