--- a/quarkus-eda-demo/src/main/resources/application.properties
+++ b/quarkus-eda-demo/src/main/resources/application.properties
@@ -7,20 +7,20 @@ mp.messaging.incoming.my-topic.key.deserializer=org.apache.kafka.common.serializ
 mp.messaging.incoming.my-topic.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 # OpenShift configuration
-quarkus.kubernetes.deploy=true
-quarkus.kubernetes.deployment-target=openshift
-quarkus.kubernetes-client.trust-certs=true
-quarkus.openshift.build-strategy=docker
-
-quarkus.openshift.resources.requests.memory=512Mi
-quarkus.openshift.resources.requests.cpu=0.5
-quarkus.openshift.resources.limits.memory=512Mi
-quarkus.openshift.resources.limits.cpu=0.5
+#quarkus.kubernetes.deploy=true
+#quarkus.kubernetes.deployment-target=openshift
+#quarkus.kubernetes-client.trust-certs=true
+#quarkus.openshift.build-strategy=docker
+#
+#quarkus.openshift.resources.requests.memory=512Mi
+#quarkus.openshift.resources.requests.cpu=0.5
+#quarkus.openshift.resources.limits.memory=512Mi
+#quarkus.openshift.resources.limits.cpu=0.5
 
 # Container Image build with Jib
-# quarkus.container-image.build=true
-# quarkus.container-image.registry=quay.io
-# quarkus.container-image.group=danieloh30
-# quarkus.container-image.name=quarkus-eda-demo
-# quarkus.container-image.tag=3.29.3
-# quarkus.container-image.push=true
+ quarkus.container-image.build=true
+ quarkus.container-image.registry=quay.io
+ quarkus.container-image.group=danieloh30
+ quarkus.container-image.name=quarkus-eda-demo
+ quarkus.container-image.tag=3.29.3
+ quarkus.container-image.push=true
