--- a/quarkus-eda-demo/pom.xml
+++ b/quarkus-eda-demo/pom.xml
@@ -44,14 +44,14 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-resteasy-jackson</artifactId>
     </dependency>
-    <dependency>
-      <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-openshift</artifactId>
-    </dependency>
-<!--     <dependency>-->
+<!--    <dependency>-->
 <!--      <groupId>io.quarkus</groupId>-->
-<!--      <artifactId>quarkus-container-image-jib</artifactId>-->
+<!--      <artifactId>quarkus-openshift</artifactId>-->
 <!--    </dependency>-->
+     <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-container-image-jib</artifactId>
+    </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-junit5</artifactId>
